Dynamic Search Movie for AgeLimit

--- a/src/main/resources/templates/movies/movie_info.html
+++ b/src/main/resources/templates/movies/movie_info.html
@@ -10,6 +10,14 @@
                     <div class="form-group mb-2">
                         <input type="text" th:field="*{title}" class="form-control" placeholder="영화명"/>
                     </div>
+                    <div class="form-group mx-sm-1 mb-2">
+                        <select th:field="*{ageLimit}" class="form-control"> <option value="">연령제한</option>
+                            <option th:each="age : ${T(ChanuE.MovieTheater.domain.AgeLimit).values()}"
+                                    th:value="${age}"
+                                    th:text="${age}">option
+                            </option>
+                        </select>
+                    </div>
                     <button type="submit" class="btn btn-primary mb-2">검색</button>
                 </form>
             </div>
